--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             <div class="login-page">
                 <div class="login-container">
                     <div class="login-header">
-                        <h1 id="login-title">🏗️ 建設業評価システム</h1>
+                        <h1 id="login-title">建設業評価システム</h1>
                         <p id="login-subtitle">システムにログインしてください</p>
                         <div style="margin-top: 16px;">
-                            <select id="login-language-select" style="padding: 8px; border-radius: 4px; border: 1px solid #ddd;">
+                            <select id="login-language-select">
                                 <option value="ja">🇯🇵 日本語</option>
                                 <option value="vi">🇻🇳 Tiếng Việt</option>
                                 <option value="en">🇺🇸 English</option>
@@ -98,7 +98,7 @@
                             <input type="password" id="password" name="password" value="password123" required autocomplete="current-password">
                         </div>
                         
-                        <button type="submit" class="btn btn-primary" style="width: 100%;" id="login-submit">
+                        <button type="submit" class="btn btn-primary" id="login-submit">
                             ログイン
                         </button>
                     </form>
@@ -108,24 +108,17 @@
                         <strong id="demo-title">🚀 デモアカウント</strong>
                         <div class="demo-accounts">
                             <div class="demo-account">
-                                <strong>管理者:</strong> admin@company.com / password123
-                                <br><small>すべての機能にアクセス可能</small>
+                                <strong>管理者</strong>: admin@company.com / password123
+                                <small>すべての機能にアクセス可能</small>
                             </div>
                             <div class="demo-account">
-                                <strong>マネージャー:</strong> manager@company.com / password123
-                                <br><small>チーム評価管理が可能</small>
+                                <strong>マネージャー</strong>: manager@company.com / password123
+                                <small>チーム評価管理が可能</small>
                             </div>
                             <div class="demo-account">
-                                <strong>主任:</strong> supervisor@company.com / password123
-                                <br><small>部下の評価作成が可能</small>
+                                <strong>主任</strong>: supervisor@company.com / password123
+                                <small>部下の評価作成が可能</small>
                             </div>
-                        </div>
-                        
-                        <!-- システム情報 -->
-                        <div style="margin-top: 16px; padding: 12px; background: rgba(36, 78, 255, 0.1); border-radius: 6px; font-size: 12px;">
-                            <strong>📱 対応言語:</strong> 日本語・ベトナム語・英語<br>
-                            <strong>🏗️ 対象:</strong> 建設業界・技能実習生対応<br>
-                            <strong>📊 機能:</strong> 評価管理・レーダーチャート・多言語対応
                         </div>
                     </div>
                 </div>
