--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <!-- プリロード設定 -->
     <link rel="preload" href="assets/app.js" as="script">
-    <link rel="preload" href="config/translations.json" as="fetch" crossorigin>
+    <link rel="preload" href="./config/translations.json" as="fetch" crossorigin>
 </head>
 <body class="login-mode">
     <!-- アプリケーションコンテナ -->
